pongServer/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pong-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong-server
  template:
    metadata:
      labels:
        app: pong-server
    spec:
      containers:
        - name: pong-server
          image: remioluwatomi/pong-server:1.1
