pongServer/manifests/Service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pong-server-svc

spec:
  type: ClusterIP

  selector:
    app: pong-server

  ports:
    - name: pong-server-http
      protocol: TCP
      port: 4567
      targetPort: 4443
