pongServer/manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: pong-server-ingress

spec:
  rules:
    - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pong-server-svc
          port:
            number: 4567
